syntax = "proto3";

package routingpb;

option go_package="github.com/Dinesh789kumar12/CarApp/definitions-store/routingpb";


message RoutingAvailabilityRequest {
    int32 CarId=1;
    string CarType=2;
}

message RoutingAvailabilityResponse {
    int32 CarId=1;
    string CarType=2;
    string Location=3;
    float price=4;
}

service RoutingService {
    rpc GetAvailability(stream RoutingAvailabilityRequest) returns (stream RoutingAvailabilityResponse) {};
}